fix overflow; must have been some merge error

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -107,7 +107,3 @@ body {
 body.loaded #ui-loading-overlay {
 	display: none;
 }
-
-#extendo-add {
-	width: 1.75em;
-}
